complite customer managment & start restaurant managment